# zisk-testvectors

./: .gitignore  Cargo.toml  README.md
arith_eq_384_gen/: arith_eq_384_gen.elf
bls12_381/: bls12_381.elf
fcall_msb/program/: Cargo.toml
fcall_msb/program/src/: main.rs
guests/: Cargo.toml
host/: Cargo.toml  README.md  build.rs
host/src/: cli.rs  elfs.rs  main.rs  runner.rs
keccak/program/: Cargo.toml  build.rs
keccak/program/elf/: keccak_hasher  keccak_hasher_precomp
keccak/program/src/: main.rs
tools/program_gen/: Cargo.toml
tools/program_gen/src/: main.rs
tools/program_gen/src/tests/: arith_eq.rs  arith_eq_384.rs  bigint.rs  bn254.rs  builder.rs  config.rs  keccakf.rs  mod.rs  poseidon2.rs  sha256f.rs  utils.rs
tools/program_gen/src/tests/test_data/: add256_tests.json  bigint_tests.json  blake2_tests.json  keccakf_tests.json  sha256f_tests.json
zisk-programs/: Cargo.toml  build.rs  build.sh
zisk-programs/add256/program/: Cargo.toml
zisk-programs/add256/program/src/: main.rs
zisk-programs/arith_eq_384_gen/: arith_eq_384_gen.elf
zisk-programs/arith_eq_384_gen/program/: Cargo.toml
zisk-programs/arith_eq_384_gen/program/src/: main.rs
zisk-programs/arith_eq_gen/: arith_eq_gen.elf
zisk-programs/arith_eq_gen/program/src/: main.rs
zisk-programs/arith_eq_pow/: arith_eq_pow.elf
zisk-programs/arith_eq_pow/program/: Cargo.toml
zisk-programs/arith_eq_pow/program/src/: main.rs
zisk-programs/blake2/program/: Cargo.toml  build.rs
zisk-programs/blake2/program/src/: main.rs
zisk-programs/bls12_381/: bls12_381.elf
zisk-programs/bls12_381/program/src/: constants.rs  cyclotomic.rs  final_exp.rs  fp.rs  fp12.rs  fp6.rs  main.rs  pairing.rs  twist.rs
zisk-programs/blst/program/: Cargo.toml
zisk-programs/blst/program/src/: main.rs
zisk-programs/bn254/: bn254.elf
zisk-programs/bn254/program/: Cargo.toml
zisk-programs/bn254/program/src/: constants.rs  cyclotomic.rs  ecadd.rs  ecmul.rs  final_exp.rs  fp.rs  fp12.rs  fp6.rs  main.rs  pairing.rs  twist.rs
zisk-programs/diagnostic/elf/: diagnostic.elf  or.elf  sll_w.elf  sra.elf  srl_w.elf  xor.elf
zisk-programs/diagnostic/program/: Cargo.toml
zisk-programs/diagnostic/program/src/: arith256.rs  arith_eq.rs  arith_eq_384.rs  arith_eq_384_tests.rs  arith_eq_tests.rs  bigint.rs  fcall.rs  keccakf_tests.rs  main.rs  riscv_fd.rs  riscv_ima.rs  sha256f.rs  sha256f_tests.rs
zisk-programs/ecrecover/: ecrecover.elf
zisk-programs/ecrecover/program/src/: main.rs
zisk-programs/fcall/: fcall.elf
zisk-programs/fcall/program/: Cargo.toml
zisk-programs/fcall/program/src/: main.rs
zisk-programs/fcall_msb/: fcall_msb.elf
zisk-programs/fcall_msb/program/: Cargo.toml
zisk-programs/fcall_msb/program/src/: main.rs
zisk-programs/keccak/: keccak.elf
zisk-programs/keccak/program/: Cargo.toml  build.rs
zisk-programs/keccak/program/src/: main.rs
zisk-programs/modexp/: modexp.elf
zisk-programs/modexp/program/: Cargo.toml
zisk-programs/modexp/program/src/: array_arith.rs  constants.rs  main.rs  modexp.rs  square.rs
zisk-programs/poseidon2/program/: Cargo.toml  build.rs
zisk-programs/poseidon2/program/src/: main.rs
zisk-programs/precompiles/program/: Cargo.toml
zisk-programs/precompiles/program/src/: arith_eq_384_tests.rs  arith_eq_tests.rs  main.rs
zisk-programs/prover_killers/: prover_killers.elf
zisk-programs/prover_killers/program/: Cargo.toml
zisk-programs/prover_killers/program/src/: main.rs
zisk-programs/revm/: Cargo.toml
zisk-programs/revm/program/: Cargo.toml
zisk-programs/revm/program/src/: bls12_381.rs  bn254.rs  keccak256.rs  main.rs  modexp.rs  secp256k1.rs  secp256r1.rs  sha256.rs
zisk-programs/revm/program/src/bls-tests/add_G1/: add_G1_bls.yaml
zisk-programs/revm/program/src/bls-tests/add_G2/: add_G2_bls.yaml
zisk-programs/revm/program/src/bls-tests/fail_add_G1/: fail-add_G1_bls.yaml
zisk-programs/revm/program/src/bls-tests/fail_add_G2/: fail-add_G2_bls.yaml
zisk-programs/revm/program/src/bls-tests/fail_map_fp2_to_G2/: fail-map_fp2_to_G2_bls.yaml
zisk-programs/revm/program/src/bls-tests/fail_map_fp_to_G1/: fail-map_fp_to_G1_bls.yaml
zisk-programs/revm/program/src/bls-tests/fail_msm_G1/: fail-msm_G1_bls.yaml
zisk-programs/revm/program/src/bls-tests/fail_msm_G2/: fail-msm_G2_bls.yaml
zisk-programs/revm/program/src/bls-tests/fail_mul_G1/: fail-mul_G1_bls.yaml
zisk-programs/revm/program/src/bls-tests/fail_mul_G2/: fail-mul_G2_bls.yaml
zisk-programs/revm/program/src/bls-tests/fail_pairing_check/: fail-pairing_check_bls.yaml
zisk-programs/revm/program/src/bls-tests/map_fp2_to_G2/: map_fp2_to_G2_bls.yaml
zisk-programs/revm/program/src/bls-tests/map_fp_to_G1/: map_fp_to_G1_bls.yaml
zisk-programs/revm/program/src/bls-tests/msm_G1/: msm_G1_bls.yaml
zisk-programs/revm/program/src/bls-tests/mul_G1/: mul_G1_bls.yaml
zisk-programs/revm/program/src/bls-tests/mul_G2/: mul_G2_bls.yaml
zisk-programs/revm/program/src/bls-tests/pairing_check/: pairing_check_bls.yaml
zisk-programs/revm/program/src/bls12_381/: common.rs  g1_add.rs  g2_msm.rs  map_fp_to_g1.rs
zisk-programs/revm/program/src/bn254/: add.rs
zisk-programs/revm/program/src/u256/: mod.rs  saturating.rs
zisk-programs/revm/src/: blake2f.rs  common.rs  main.rs  secp256k1.rs  secp256r1.rs
zisk-programs/revm/src/bls12_381/: g1_mul.rs  g2_add.rs  pairing.rs
zisk-programs/revm/src/bn254/: common.rs  mod.rs
zisk-programs/revm/src/u256/: common.rs  mod.rs
zisk-programs/secp256k1/: Cargo.toml
zisk-programs/secp256k1/program/src/: constants.rs  curve.rs  ecdsa.rs  fp.rs  main.rs  scalar.rs
zisk-programs/secp256r1/program/: Cargo.toml
zisk-programs/secp256r1/program/src/: ecdsa.rs  main.rs
zisk-programs/sha256/: sha256.elf
zisk-programs/sha256/program/: Cargo.toml  build.rs
zisk-programs/sha256/program/src/: main.rs
zisk-programs/src/: lib.rs
zisk-programs/steps/program/: Cargo.toml
zisk-programs/steps/program/src/: main.rs
zisk-programs/substrate_bn/program/: Cargo.toml
zisk-programs/substrate_bn/program/src/: main.rs
zisk-programs/uint256/: Cargo.toml
(+2816 files in other folders)
