[package]
name = "host"
version.workspace = true
edition.workspace = true

[dependencies]
zisk-sdk.workspace = true

anyhow.workspace = true
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true

[build-dependencies]
zisk-sdk.workspace = true
