[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "add256/program",
    "arith_eq_384_gen/program",
    "arith_eq_gen/program",
    "blake2/program",
    "bls12_381/program",
    "bn254/program",
    "diagnostic/program",
    "fcall/program",
    "fcall_msb/program",
    "keccak/program",
    "modexp/program",
    "poseidon2/program",
    "revm/program",
    "secp256k1/program",
    "secp256r1/program",
    "sha256/program",
]
resolver = "2"

[profile.dev]
debug = 0  # No debug info to prevent linker overflow

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[workspace.dependencies]
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git", branch = "fix/arraylib" }
zisk-sdk = { git = "https://github.com/0xPolygonHermez/zisk.git", branch = "fix/arraylib" }
precompiles-helpers = { git = "https://github.com/0xPolygonHermez/zisk.git", branch = "fix/arraylib" }
# ziskos = { path = "../../zisk/ziskos/entrypoint" }
# zisk-sdk = { path = "../../zisk/sdk" }
# precompiles-helpers = { path = "../../zisk/precompiles/helpers" }

guest-reth = { git = "https://github.com/0xPolygonHermez/zisk-eth-client.git", tag = "v0.7.0" }
# guest-reth = { path = "../../../../patches/zisk-eth-client/crates/guest-reth" }

revm = { version = "34.0.0", default-features = false }

alloy-primitives = { version = "1.5.4", default-features = false }
alloy-consensus = { version = "1.6.0", default-features = false }

hex = "0.4"
num-bigint = "0.4"
serde = "1.0"
serde_json = "1.0"
rand = "0.8"

# This is needed for revm to work
[patch."https://github.com/paradigmxyz/stateless.git"]
stateless = { git = "https://github.com/0xPolygonHermez/zisk-patch-stateless.git", branch = "zisk/68cd8e73" }
# stateless = { path = "../zisk-patch-stateless/crates/stateless" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_vendor, values("zisk"))'] }
