[package]
name = "fcall_msb"
version = "0.1.0"
edition = "2021"
default-run = "fcall_msb"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
byteorder = "1.5.0"
# tiny-keccak = { git = "https://github.com/0xPolygonHermez/zisk-patch-tiny-keccak.git", branch = "zisk", features = [ "keccak" ] }
# tiny-keccak = { version = "2.0.2", features = ["keccak"] }
#ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git" }
ziskos = { path = "../../../zisk5/ziskos/entrypoint" }
