[package]
name = "keccak_hasher"
version = "0.1.0"
edition = "2021"
default-run = "keccak_hasher"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git" }
#ziskos = { path = "../zisk/ziskos/entrypoint" }
