[package]
name = "program_gen"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "program_gen"
path = "src/main.rs"

[dependencies]
clap = "4.5.50"
env = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
# precomp-arith-eq = { git = "https://github.com/0xPolygonHermez/zisk.git" }
# precomp-arith-eq-384 = { git = "https://github.com/0xPolygonHermez/zisk.git" }
# Local development
precomp-arith-eq = { path = "../../../zisk/precompiles/arith_eq" }
precomp-arith-eq-384 = { path = "../../../zisk/precompiles/arith_eq_384" }
