[package]
name = "program_gen"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "program_gen"
path = "src/main.rs"

[dependencies]
precomp-arith-eq = { workspace = true }
precomp-arith-eq-384 = { workspace = true }

clap = { workspace = true }
env = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
