[package]
name = "keccak"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
ziskos = { workspace = true }
rand = { workspace = true }
byteorder = "1.5.0"
tiny-keccak = { git = "https://github.com/0xPolygonHermez/zisk-patch-tiny-keccak.git", branch = "zisk", features = [ "keccak" ] }
# tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[lints]
workspace = true