[package]
name = "revm"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
hex = "0.4"
num-bigint = "0.4"
ziskos = { workspace = true }

revm = { version = "33.1.0", default-features = false }

alloy-primitives = { version = "1.5.4", default-features = false, features = ["native-keccak"] }

alloy-consensus = { version = "1.6.0", default-features = false, features = ["crypto-backend"] }

# crypto = { git = "https://github.com/0xPolygonHermez/zisk-eth-client.git", branch = "feat/new-patch-style" }
# Local development
crypto = { path = "../../../../patches/zisk-eth-client/crates/crypto" }

[lints]
workspace = true