[package]
name = "revm"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
hex.workspace = true
num-bigint.workspace = true
serde.workspace = true
serde_json.workspace = true

ziskos.workspace = true

revm.workspace = true

alloy-primitives = { workspace = true, features = ["native-keccak"] }
alloy-consensus = { workspace = true, features = ["crypto-backend"] }

guest-reth.workspace = true

[lints]
workspace = true